[workspace]
resolver = "2"
members = ["stick", "sim"]

[workspace.package]
edition = "2024"
rust-version = "1.88"
version = "0.1.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = 3

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
