[package]
name = "app"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["alloc"]
std = []
alloc = []

[dependencies]
log = "0.4.27"

# ESP-specific dependencies (only for no_std builds)
esp-alloc = { version = "0.9.0", optional = true }

# Embassy for async/events
embassy-sync = { version = "0.7.2", default-features = false }

# UI framework
ratatui = { version = "0.30.0-beta.0", default-features = false }
