[package]
name = "app"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["alloc"]
std = []
alloc = []

[dependencies]
log = "0.4.27"

strum = { version = "0.26", default-features = false, features = ["derive"] }

esp-alloc = { version = "0.9.0", optional = true }

embassy-sync = { version = "0.7.2", default-features = false }
embassy-time = { version = "0.5.0", default-features = false }

ratatui = { version = "0.30.0-beta.0", default-features = false }
