[package]
name = "sim"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "sim"
path = "./src/main.rs"

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"

embedded-graphics = "0.8.1"
embedded-graphics-simulator = "0.8.0"

embassy-executor = { version = "0.9.1", features = ["arch-std", "executor-thread"] }
embassy-time     = { version = "0.5.0", features = ["std"] }
embassy-sync = { version = "0.7.2" }
critical-section = { version = "1.2", features = ["std"] }

app = { path = "../app", features = ["std"] }

mousefood = { git = "https://github.com/j-g00da/mousefood", rev = "c8d5e4a5af50bdab623f13656494c17e92dbf688" }
ratatui = { version = "0.30.0-beta.0", default-features = false }
