[package]
name = "stick"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "stick"
path = "./src/bin/main.rs"

[features]
default = ["ir", "radio"]
ir = ["app/tv"]
radio = ["esp-radio", "embassy-net", "edge-nal", "edge-dhcp", "edge-nal-embassy"]

[dependencies]
app = { path = "../app", features = ["alloc"] }

log = "0.4.27"

esp-hal = { version = "~1.0", features = ["esp32", "log-04", "unstable", "psram"] }
esp-rtos = { version = "0.2.0", features = ["embassy", "esp-alloc", "esp32", "esp-radio" ] }
esp-radio = { version = "0.17.0", optional = true, features = [
  "esp-alloc",
  "esp-now",
  "esp32",
  "unstable",
  "wifi",
  ] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32", "log-04"] }
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.1", features = [
  "esp32",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16.1", features = ["esp32", "log-04"] }

embassy-executor = { version = "0.9.1", features = [] }
embassy-time     = "0.5.0"
embassy-sync = { version = "0.7.2" }
embassy-futures = "0.1.2"
embassy-net = { version = "0.7.0", optional = true, features = [
    "dhcpv4",
    "medium-ethernet",
    "tcp",
    "udp",
] }

edge-nal = { version = "0.5.0", optional = true }
# edge-http = { version = "0.7.0", optional = true }
edge-dhcp = { version = "0.5.0", optional = true }
edge-nal-embassy = { version = "0.6.0", optional = true }

static_cell = { version = "2.1.0", features = ["nightly"] }
critical-section = "1.2.0"

embedded-io-async = { version = "0.6.1" }
embedded-graphics = "0.8.1"
embedded-hal-bus = "0.3.0"

mipidsi = "0.9.0"

ratatui = { version = "0.30.0-beta.0", default-features = false }
# https://github.com/j-g00da/mousefood/issues/115
# > The latest version on crates.io - v2.1 uses std, but the version on main branch is already no_std
mousefood = { git = "https://github.com/j-g00da/mousefood", rev = "c8d5e4a5af50bdab623f13656494c17e92dbf688" }
nb = "1.1.0"
